@@ -693,6 +693,14 @@ for border removal).</p>
           (this is not a bug in Hatari). Use STE mode for better results</td>
     </tr>
     <tr>
+      <td>Eagles / EKO / Impact:
+      <a href="http://pouet.net/prod.php?which=20057">Place To Be Again</a></td>
+      <td>devel</td>
+      <td>Although the demo should work in STF mode, the colors will be wrong in the
+          Menu part, unless you use STE mode (this is a bug in the demo which
+          disables timer B when enabling timer A to play samples)</td>
+    </tr>
+    <tr>
       <td>Equinox:
       <a href="http://pouet.net/prod.php?which=109">Virtual Escape</a></td>
       <td>before 1.0</td>
